# SignalAnalysis

./: .gitignore  CMakeLists.txt  README.md  makeVs2017DevEnv.bat  makeVs2019DevEnv.bat
SignalAnalysisLib/: CMakeLists.txt  Signal.cpp  Signal.h  SignalAnalysis.cpp  SignalAnalysis.h
TestExe/: CMakeLists.txt  main.cpp
